# data-ecosystem-gb-santander

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
Backend/: .gitignore  confiig_santander.yml
Backend/backend-santander/: .dockerignore  Dockerfile  README.md  api_documentation.yml  docker-compose.yml  main.py  requirements.txt
Backend/backend-santander/app/: __init__.py  config.py  database.py  utils.py
Backend/backend-santander/app/models/: __init__.py  clima.py  conectividad.py  demografia.py  frentes_seguridad.py  incautaciones.py  infraestructura.py  municipios.py  seguridad.py
Backend/backend-santander/app/routers/: __init__.py  chatbot.py  clima.py  filtros.py  geografia.py  predicciones.py  temporal.py  victimas.py
Backend/backend-santander/app/routers/chatbot/: __init__.py  chatbot_base.py  chatbot_clima.py  chatbot_delitos.py  chatbot_geografia.py  chatbot_temporal.py  chatbot_victimas.py  router.py
sandbox/model/: xgboost_inference.ipynb  xgboost_training.ipynb
src/core/react-app/: .dockerignore  Dockerfile  docker-compose.simple.yml  docker-compose.yml  nginx.conf  nginx.local.conf  package.json
src/core/react-app/src/: App.jsx  index.css
src/core/react-app/src/components/charts/: BarChartComponent.jsx  ChoroplethMap.jsx  DonutChart.jsx  PointsMap.jsx  (+3 more)
src/core/react-app/src/lib/: utils.js
src/core/react-app/src/pages/: ChatbotPage.jsx  ClimaPage.jsx  DashboardPage.jsx  GeografiaPage.jsx  PrediccionesPage.jsx  TemporalPage.jsx  VictimasPage.jsx  index.js
src/core/react-app/src/services/: api.js  endpoints.js
(+6 files in other folders)
